Front Mentor: Order Sumary Component, run prettier.

--- a/fem/order-summary-component-main/index.html
+++ b/fem/order-summary-component-main/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card | Manuel soution</title>
+
+  <title>Frontend Mentor | Order summary card | Manuel solution</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header></header>
   <main class="card__container-main">
     <article class="card__container">
       <div class="card__heading">
-        <img src="images\illustration-hero.svg" class="card__heading-imagen"/>
+        <img src="images\illustration-hero.svg" class="card__heading-imagen" />
       </div>
       <div class="card__body">
         <h1 class="card__body-title">Order Summary</h1>
@@ -30,7 +33,13 @@
         </h2>
         <div class="card__body-grid">
           <div class="card__body-grid-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#DFE6FB"/><path fill="#717FA6" fill-rule="nonzero" d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z"/></g></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48">
+              <g fill="none" fill-rule="evenodd">
+                <circle cx="24" cy="24" r="24" fill="#DFE6FB" />
+                <path fill="#717FA6" fill-rule="nonzero"
+                  d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z" />
+              </g>
+            </svg>
           </div>
           <div class="card__body-grid-description">
             <p class="card__body-grid-plan">
@@ -44,7 +53,7 @@
             <a href="#">Change</a>
           </div>
         </div>
-        <input type="button" class="card__body-button" value="Proceed to Payment"/>
+        <input type="button" class="card__body-button" value="Proceed to Payment" />
         <p class="card__body-cancel-order">
           <a href="#" class="card__body-cancel-order-link">Cancel Order</a>
         </p>
@@ -52,4 +61,5 @@
     </article>
   </main>
 </body>
+
 </html>
