--- a/vanillaJS/tetris/index.html
+++ b/vanillaJS/tetris/index.html
@@ -9,10 +9,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/superhero/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://mgallegoa.github.io/vanillaJS/tetris/src/style.css"
-    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <main id="app" class="main">
@@ -33,9 +30,6 @@
         <br />
       </section>
     </main>
-    <script
-      type="module"
-      src="https://mgallegoa.github.io/vanillaJS/tetris/src/main.js"
-    ></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
