Notes : Big O notation study.

--- a/notes.html
+++ b/notes.html
@@ -69,12 +69,32 @@
       Volumes to develop in container without re-build the image
       <li>docker run -dp 5555:5174 --name react-ts-list-app -v
         /media/manuel/Datos/mgallegoa/conceptsProbes/react-ts-list-app/src:/app/react-ts-list-app/src
-        manuelarias/react-ts-list:v1 : Create a container and share a volume for development</li>
+        manuelarias/react-ts-list:v1 : Create a container and share a volume for development
+      </li>
 
       <li>docker builder prune : to purge the docker builder cache</li>
 
 
 
+    </ol>
+
+    <li>Big O, BigO:</li>
+    <ol>
+      <li>Time complexity</li>
+      <li>
+        Constant: Not scale with the input of the function (take the constant time to get the result). Big O(1)
+      </li>
+      <li>
+        Order of growht:
+        O(1): constant
+        O(log n): logarithmic. n/2. Binary Search
+        O(n): linear
+        O(n log n): logarithmic. Merge Sort
+        O(n2): quadratic. Two loops, one inside other
+        O(n3): cubic. Tree loops, one inside other two
+        O(2n): exponential
+        O(n!): factorial
+      </li>
     </ol>
   </ul>
 </body>
