Notes : More Big O notation study.

--- a/notes.html
+++ b/notes.html
@@ -85,17 +85,24 @@
         Constant: Not scale with the input of the function (take the constant time to get the result). Big O(1)
       </li>
       <li>
-        Order of growht:
+        Order of growth:
         O(1): constant
-        O(log n): logarithmic. n/2. Binary Search
+        O(log n): logarithmic. log 8=3. n/2. Binary Search
         O(n): linear
-        O(n log n): logarithmic. Merge Sort
-        O(n2): quadratic. Two loops, one inside other
+        O(n log n): linearithmic (Quasilinear). Merge Sort
+        1. Quick Sort : General-purpose, fast.
+        2. Merge Sort : Guaranteed performance.
+        3. Timsort: Nearly sorted data
+        4. Timsort / Merge: Stable + production-ready
+        5. Heap Sort: Low memory use needed
+        O(n2): quadratic (Polynomial run time). Two loops, one inside other. Fibonacci sequence.
         O(n3): cubic. Tree loops, one inside other two
-        O(2n): exponential
+        O(2n): exponential. 2 loops one after other
         O(n!): factorial
       </li>
     </ol>
+
+
   </ul>
 </body>
 
