Notes : Big O and algorithms study.

--- a/notes.html
+++ b/notes.html
@@ -103,6 +103,24 @@
     </ol>
 
 
+    <li>Data Structures:</li>
+    <ol>
+      <li>Arrays: Java Swift are homogeneous [int, int], but python and Js are heterogeneous [int, string]</li>
+      <li>
+        Constant: Not scale with the input of the function (take the constant time to get the result). Big O(1)
+      </li>
+      <li>
+        BogoSort: MonkeySort, bad O(n x n!) <a href="vanillaJS/algorithm_bogoSort.html">Bogo Sort example</a>
+        selectionSort: O(n2)
+        QuickSort: O(n2), best case O(n log n)
+        MergeSort: O(n log n)
+      </li>
+      <li>
+        linearSearch: O(n)
+        binarySearch: O(log n)
+      </li>
+    </ol>
+
   </ul>
 </body>
 
