--- a/notes.html
+++ b/notes.html
@@ -78,7 +78,12 @@
 
     </ol>
 
-    <li>Big O, BigO:</li>
+    <li>Asymptotic notation:
+      <ol>Omega(n) notation: the lowest bound (best) of running time</ol>
+      <ol>Theta(o) notation: the average bound (average) of running time</ol>
+      <ol>Big O(O) notation: the upper bound (worse) of running time</ol>
+    </li>
+    <li>Big O, BigO: Asymptotic notation</li>
     <ol>
       <li>Time complexity</li>
       <li>
@@ -95,7 +100,7 @@
         3. Timsort: Nearly sorted data
         4. Timsort / Merge: Stable + production-ready
         5. Heap Sort: Low memory use needed
-        O(n2): quadratic (Polynomial run time). Two loops, one inside other. Fibonacci sequence.
+        O(n2): quadratic (Polynomial algorithm run time). Two loops, one inside other. Fibonacci sequence.
         O(n3): cubic. Tree loops, one inside other two
         O(2n): exponential. 2 loops one after other
         O(n!): factorial
@@ -120,6 +125,69 @@
         binarySearch: O(log n)
       </li>
     </ol>
+
+
+    <li>Algorithms:</li>
+    <ol>
+      <li>Golden Rules to solve problems:
+        <ol>
+          <li>If the coding problem require search in a O(1), use Set or Map</li>
+          <li>If finding/manipulating/dealing and farthest 'K' element in a given element 'N', try Heap</li>
+          <li>If the problem has a SORTED Array, List or Matrix, use Two Pointer or Binary Search</li>
+          <li>If require trying all Permutations and Combinations, use Backtracking or Breadth First Search</li>
+          <li>If input in the form Tree or Graph, use Tree Traversals or Graph Traversals called Breadth First Search
+            BFS or Depth First Search DFS</li>
+          <li>If is with Single Linked List use Two Pointers or Slow/Fast Pointers</li>
+          <li>If the problem has a recursive solution, use Stack data structure with a loop</li>
+          <li>If the problem is iterating an array with a Time Complexity of O(n2) with Space Complexity of O(1), use
+            HashMap/HashSet. It makes Time Complexity O(n) but Space of O(n)</li>
+          <li>If the problem is iterating an array with a Time Complexity of O(n2) with Space Complexity of O(1), try
+            sort the array. It makes Time Complexity O(n log n) but Space of O(1)</li>
+          <li>If the problem is optimize recursive solution, dynamic programming can be used</li>
+          <li>If the problem has a group of string to manipulation/find/sorting around substring, Tries or HashMap can
+            be used</li>
+        </ol>
+      </li>
+      <li>
+        Coding Patterns
+        <ol>
+          <li>Two Pointers: indexes of Array/List. Process two elements at the same time.<br />
+            * Array/List sorted and comparison need between its elements.<br />
+            * Array/List need some certain rearrangement/removal in-place.<br /><br />
+            - Two Sum II - Input Array is Sorted.<br />
+            - Container With Most Water.<br />
+            - Remove duplicate from Sorted Array.<br />
+            - Next permutations.<br />
+            - Trapping Rain Water<br />
+          </li>
+          <li>Fast and Slow Pointers: indexes of Array/List. Two pointers iterate array/list at different speeds.<br />
+            <br />
+            - Linked List Cycle<br />
+            - Middle of the Linked List<br />
+            - Palindrome Linked List<br />
+            - Happy Number<br />
+            - Circular Array Loop<br />
+          </li>
+          <li>Sliding window 1:48 minute: indexes of Array/List. Process two elements at the same time.<br />
+            * Array/List need some certain rearrangement/removal in-place.<br /><br />
+            - Two Sum II - Input Array is Sorted.<br />
+          </li>
+          <li>
+            Find sum of natural numbers: public int sumNaturalNum(int n){return n * (n+1)/2}
+          </li>
+
+        </ol>
+      </li>
+      <li>
+        MergeSort: O(n log n)
+      </li>
+      <li>
+        linearSearch: O(n)
+        binarySearch: O(log n)
+      </li>
+
+    </ol>
+
 
   </ul>
 </body>
