Notes : Algorithms, complexity of Big O, study.

--- a/notes.html
+++ b/notes.html
@@ -83,7 +83,8 @@
       <ol>Theta(o) notation: the average bound (average) of running time</ol>
       <ol>Big O(O) notation: the upper bound (worse) of running time</ol>
     </li>
-    <li>Big O, BigO: Asymptotic notation</li>
+    <li>Big O, BigO: Asymptotic notation <a
+        href="https://www.youtube.com/watch?v=Mo4vesaut8g&list=WL&index=65&t=22s">Video</a></li>
     <ol>
       <li>Time complexity</li>
       <li>
@@ -108,7 +109,7 @@
     </ol>
 
 
-    <li>Data Structures:</li>
+    <li>Data Structures: <a href="https://www.youtube.com/watch?v=8hly31xKli0">Video</a></li>
     <ol>
       <li>Arrays: Java Swift are homogeneous [int, int], but python and Js are heterogeneous [int, string]</li>
       <li>
@@ -167,6 +168,7 @@
             - Palindrome Linked List<br />
             - Happy Number<br />
             - Circular Array Loop<br />
+            Algorithms repository is use to define and implement in different languages
           </li>
           <li>Sliding window 1:48 minute: indexes of Array/List. Process two elements at the same time.<br />
             * Array/List need some certain rearrangement/removal in-place.<br /><br />
