Notes : Java, more notes about the java programing language, study.

--- a/notes.html
+++ b/notes.html
@@ -316,13 +316,80 @@
             5. Native Method stack Memory<br />
           </li>
           <li>
-            Association: relationship that has not ownership over another.<br />
-            Copy Constructor: Initialize an object of the same class.<br />
-            Marker Interface: is empty Interface, examples: Serializable and
+            * Association: relationship that has not ownership over another.<br />
+            * Copy Constructor: Initialize an object of the same class.<br />
+            * Marker Interface: is empty Interface, examples: Serializable and
             Clonable. <br />
-            Java is not completely Object Oriented: Use 8 primitive data
+            * Java is not completely Object Oriented: Use 8 primitive data
             types.<br />
-            Wrapper Classes are use to convert primitive to Objects.<br />
+            * Wrapper Classes are use to convert primitive to Objects.<br />
+            * Pointers are eliminated in java.<br />
+            * Java String Pool: Collections of string in java Heap, java first
+            search the string in the string pool if not exist created it .<br />
+            * Exceptions: 1. Compilation 2. Runtime 3. Error.<br />
+            * If not declared static in a main() method, it throws an run time
+            exception NoSuchMethodError.<br />
+          </li>
+          <li>
+            * JDK and variants: Combine JRE and Dev tools used to design Java
+            Apps:<br />
+            1. JDK Standard Edition 2. JDK Enterprise Edition 3. JDK Micro
+            Edition<br />
+            * Access and Type Access specifiers: help JVM to understand the
+            scope of a variable, method and class, the four access specifiers
+            are: 1. Public 2. Protected 3. Default 4. Private<br />
+            * Constructor implicitly return an instance but never a value.<br />
+            * Dynamic in nature: Java is considered Dynamic in nature because
+            have run-time information used to resolve object access in
+            run-time.<br />
+            * this and super keywords are references to objects keywords, this
+            refer to current and parent object.<br />
+            * Method overloading is a type of polymorphism, can by next two of:
+            1. Vary arguments 2. Vary return-type.<br />
+            * Static can not be referenced.<br />
+            * Late Binding: unknown and till the method is called in
+            run-time.<br />
+            * Method Dispatch: The method call is executed in run-time.<br />
+            * Delete is fast in linked list than array because use a complete
+            memory block use the memory heap for the references.<br />
+            * Life of 5 states of cycle of thread: 1. New born 2. Run-able 3.
+            Running 4. Blocked 5. Dead.<br />
+            * Operator >> is for job the right shifting the sing bits and >>> is
+            to shift out the zero filled bits.<br />
+            * Life of 5 states of applet: 1. Initialization 2. Start 3. Stop 4.
+            Destroy 5. Paint<br />
+            * Generics: for compile-time safety.<br />
+            * Externalizable interface: control flow over serialization process.
+            It incorporate readExternal and writeExternal methods <br />
+            * Daemon Thread: least priority, run in background in VM and create
+            with setDaemon() method.<br />
+            * Enum: Is an Interface, sequential access stored in a
+            collection.<br />
+            * finalize method: Garbage Collector call the method finalize()
+            after collect the object, it is one time.<br />
+            * super and this should be at the first in the constructor. public
+            constrctor(){super();this();}<br />
+          </li>
+
+          <li>
+            * JSP: two types of text: 1. Static Data 2. JSP elements.<br />
+            * JDBC: Java Data Base Connector, abstraction layer to establish a
+            connection.<br />
+            * JSP Directives: Instructions processed by JSP Engine. After JSP
+            compiled in servlets, Directives used to set page-level
+            instructions, insert data and specify custom tags libs. Are used
+            between <%@ %><br />
+            * JSP Types of Directives: 1. include: include file and merge the
+            content with the page. 2. page: define specific attributes in the
+            JSP page, example: error page and buffer. 3. Taglib: declare a
+            custom tag library.<br />
+            * Observer and Observable: Observable maintain a list of observers.
+            When Observable is updated (extends Observable), invoked the
+            update() method of EACH observer (implements Observer). The Observer
+            class, implement the Observable object with the update method.<br />
+            * Session Manager: .<br />
+            * Spring boot: .<br />
+            * JCA: Java Cryptography Architecture .<br />
           </li>
         </ol>
       </li>
