Notes : Java, more notes about the java programing language, study.

--- a/notes.html
+++ b/notes.html
@@ -387,9 +387,21 @@
             When Observable is updated (extends Observable), invoked the
             update() method of EACH observer (implements Observer). The Observer
             class, implement the Observable object with the update method.<br />
-            * Session Manager: .<br />
-            * Spring boot: .<br />
-            * JCA: Java Cryptography Architecture .<br />
+            * Session Manager: Random conversations between client and server. A
+            string of request and responses, most common is session ID.<br />
+            * Spring Framework: Is an app framework and inversion of control
+            container for java. Is conducted to any java application.<br />
+            * JCA: Java Cryptography Architecture, platform and gives
+            architecture and API for encryption and decryption.<br />
+            * JPA: Java Persistence Api, for desktop and web app: 1) Java
+            Persistence API. 2) Query Language. 3) Java Persistence Criteria
+            API. 4) Object Mapping Metadata.<br />
+            * Authentication in Java Servlets: Four different options: 1) Basic
+            Authentication: Username and password. 2) Form-base authentication:
+            Login form made for the programmer using HTML. 3) Digest
+            Authentication: similar to basic but with pass encrypted using hash
+            formula. 4) Client Certificate Authentication: Each client accessing
+            send a certificate, it requires SSL protocol.
           </li>
         </ol>
       </li>
